<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/navigation_visited"
        android:icon="@drawable/ic_restaurant_black_24dp"
        android:title="@string/title_visited"
    />

    <item
        android:id="@+id/navigation_history"
        android:icon="@drawable/ic_access_time_black_24dp"
        android:title="@string/title_history"
        />

    <item
        android:id="@+id/navigation_search"
        android:icon="@drawable/ic_search_black_24dp"
        android:title="@string/title_search"
        />

    <item
        android:id="@+id/navigation_reviews"
        android:icon="@drawable/ic_library_books_black_24dp"
        android:title="@string/title_reviews"
        />

</menu>
